# Llama.cpp-Build-Assistant

./: .gitignore  README.md  app.py  build_llamacpp.ps1  build_llamacpp.sh  builder.py  config.py  dependency_checker.py  dependency_installer.py  hardware_check.py  logger.py  profile_manager.py  pyproject.toml  python_manager.py  repo_manager.py  requirements.txt  source_manager.py  start.bat  start.sh
.github/workflows/: release.yml  test.yml
data/: build_history.json  build_sources.json  profiles.json  system_report.json
tests/: conftest.py  test_builder.py  test_dependency_installer.py  test_hardware.py  test_python_manager.py  test_repo.py  test_sources.py
