[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-cpp-build-assistant"
version = "2.2.6"
description = "Cross-platform GUI assistant that clones llama.cpp forks and builds the right variant (CPU/CUDA/Vulkan/HIP/SYCL) for your hardware."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "build-assistant contributors" },
]
keywords = ["llama.cpp", "build", "cuda", "vulkan", "hip", "sycl", "rdna4", "ggml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "customtkinter>=1.1.0",
    "psutil>=5.9.0",
    "py-cpuinfo>=9.0.0",
    "GPUtil>=1.4.0",
    "packaging>=23.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
"Homepage" = "https://github.com/freak288/llama-cpp-build-assistant"

[tool.setuptools]
py-modules = [
    "app", "config", "hardware_check", "dependency_checker",
    "dependency_installer", "builder", "repo_manager", "source_manager",
    "profile_manager", "logger", "python_manager",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.coverage.run]
source = [
    "config", "source_manager", "profile_manager", "python_manager",
    "hardware_check", "dependency_checker", "builder", "repo_manager",
]
omit = ["*/tests/*", "app.py"]
